--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,7 +2,7 @@
 	{{name}}
 
 	<button class="change-eaten" data-id="{{id}}" data-newEaten="{{eaten}}">
-		{{#if eaten}}Prepare Another!{{else}}Devour it!{{/if}}
+		{{#if eaten}}Devour it!{{else}}Prepare Another!{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">Delete Burger!</button>
